# goose-browser-automation-v2

./: .gitignore  DOCUMENTATION.md  README.md  REQUIREMENTS.md  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  setup.py
backups/: enhanced_inspector.py.bak
backups/20250325/: browser_controller.py  enhanced_inspector.py
src/browser_automation/: __init__.py  py.typed  server.py  square_selectors.py
src/browser_automation/controllers/: __init__.py  browser_controller.py  browser_controller.pyi  square_controller.py  square_controller_new.py
src/browser_automation/core/: element_locator.py  exceptions.py  web_component_handler.py
src/browser_automation/utils/: __init__.py  base_logger.py  inspector.py  logging_utils.py  selectors.py  smart_selector.py
src/browser_automation_current_backup/: main.py  server.py  square_selectors.py
src/browser_automation_current_backup/controllers/: __init__.py  browser_controller.py  square_controller.py
src/browser_automation_current_backup/core/: exceptions.py  web_component_handler.py
src/browser_automation_current_backup/utils/: enhanced_inspector.py  inspector.py  security.py  test_login.py  web_components.py
src/browser_automation_working_backup/: logging_utils.py  server.py  square_selectors.py  test_extension.py
tests/: conftest.py  test_enhanced_inspector.py  test_square_login.py
tests/e2e/: test_mcp.py
tests/integration/: test_square_login.py
tests/unit/: test_browser.py  test_core.py
