[project]
name = "browser-automation"
version = "0.1.0"
description = "Browser Automation Extension for Goose"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playwright>=1.51.0",
    "mcp==1.4.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["browser_automation"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
browser_automation = ["py.typed"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pylance]
reportMissingImports = true
reportMissingModuleSource = true
reportUntypedFunctionDecorator = true
reportUntypedClassDecorator = true
reportUntypedNamedTuple = true
reportPrivateUsage = true
reportPrivateImportUsage = true
reportOptionalSubscript = true
reportOptionalMemberAccess = true
reportOptionalCall = true
reportOptionalIterable = true
reportOptionalContextManager = true
reportOptionalOperand = true